Fixed carousel image stretch/resize issues for better dynamic sizing

--- a/style/style.css
+++ b/style/style.css
@@ -84,13 +84,10 @@ nav a:hover {
 
 }
 
-.carousel-item {
-  max-height: 100%;
-}
-
 .all-slides {
   display: none;
-  max-height: 75vh;
+  max-height: 85vh;
+  max-width: 75vw;
   margin-bottom: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -192,10 +189,6 @@ footer a:hover {
     width: 760px;
   }
 
-  .all-slides {
-    width: 500px;
-  }
-
 }
 
 
@@ -232,10 +225,6 @@ footer a:hover {
 
   .jumbotron-img {
     width: 375px;
-  }
-
-  .all-slides {
-    width: 300px;
   }
 
   .pdf-fullscreen {
